--- a/chart/hello/templates/deployment.yaml
+++ b/chart/hello/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
         app: {{ template "name" . }}
         release: {{ .Release.Name }}
     spec:
-      imagePullSecrets:
-        - name: {{ .Values.image.pullSecret }}
+      # imagePullSecrets:
+      #   - name: {{ .Values.image.pullSecret }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
