--- a/chart/hello/templates/service.yaml
+++ b/chart/hello/templates/service.yaml
@@ -1,19 +1,33 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
-  labels:
-    app: {{ template "name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: hello-service
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
-      protocol: TCP
-      name: {{ .Values.service.name }}
+    - name: https
+      port: 443
+    - name: http
+      port: 80
   selector:
-    app: {{ template "name" . }}
-    release: {{ .Release.Name }}
+    app: hello
+# NodePort approach
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: {{ template "fullname" . }}
+#   labels:
+#     app: {{ template "name" . }}
+#     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+#     release: {{ .Release.Name }}
+#     heritage: {{ .Release.Service }}
+# spec:
+#   type: {{ .Values.service.type }}
+#   ports:
+#     - port: {{ .Values.service.externalPort }}
+#       targetPort: {{ .Values.service.internalPort }}
+#       protocol: TCP
+#       name: {{ .Values.service.name }}
+#   selector:
+#     app: {{ template "name" . }}
+#     release: {{ .Release.Name }}
