--- a/chart/hello/values.yaml
+++ b/chart/hello/values.yaml
@@ -2,18 +2,16 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 2
+# Default image is nginx hello-world web server
 image:
-  repository: webapp
-  tag: 1
-  pullSecret: regsecret
-  pullPolicy: IfNotPresent
-  # for local development against Minikube registry
-  #pullPolicy: Never    
+  repository: docker.io/nginxdemos/hello
+  tag: latest
+  pullPolicy: Always
 service:
   name: hello-service
-  type: NodePort
-  externalPort: 80
-  internalPort: 8080
+  # type: NodePort
+  # externalPort: 3337
+  internalPort: 80
 ingress:
   enabled: false
   # Used to create an Ingress record.
